// author: chenquan
// date: 16-8-25
// last modified: 16-12-29 13:50
// last Modified Author: zhangkejie
// change log:fix the cert and signature
//
// message defination for network transaction
//
syntax="proto3";

package message;

import "hyperchain/p2p/hts/certificate.proto";

message Message{
    // From the message source 
    bytes From           = 1;
    MsgType MessageType  = 2;
    bytes  Payload       = 3;
    int64 MsgTimeStamp   = 4;
    hts.Certificate Cert = 5;

    //MsgType message type during data transfer 
    enum MsgType {
        HELLO               = 0;
        HELLO_RESPONSE      = 1;
        HELLOREVERSE        = 2;
        HELLOREVERSE_RESPONSE = 3;
        INTRODUCE           = 4;
        INTRODUCE_RESPONSE  = 5;
        ATTEND              = 6;
        ATTEND_RESPONSE     = 7;
        ATTEND_NOTIFY       = 8;
        ATTEND_NOTIFY_RESPONSE = 9;
        RESPONSE            = 10;
        KEEPALIVE           = 11;
        PENDING             = 12;
        RECONNECT           = 13;
        RECONNECT_RESPONSE  = 14;
        SESSION             = 15;
    }
}

//PeerAddress the peer address
message PeerAddress {
        string IP      =   1;
        int32  Port    =   2;
        int32  RPCPort =   3;
        string Hash    =   4;
        int32 ID       =   5;
        bool IsPrimary =   6;
}


